# Indizio

./: .gitignore  Dockerfile  README.md  foo.tree  metadata.csv  pa.csv  pa2.csv  pyproject.toml  setup.py  utils.py
.github/workflows/: pypi-publish.yml  pypi-test.yml
docs/: release.md
env/: meta.yaml
example/: pa.tsv  tree.nwk
indizio/: __init__.py  __main__.py  app.py  cache.py  config.py  logger.py  make_input_sheet.py  utils.py
indizio/assets/: global.css
indizio/components/: navbar.py
indizio/components/clustergram/: __init__.py  clustergram_plot.py
indizio/components/common/: plotly_color_scale.py  plotly_color_scale_discrete.py
indizio/components/console/: __init__.py  console_interval.py  console_msg.py
indizio/components/debug/: container.py  store.py
indizio/components/help/: modal_dm.py  modal_meta.py  modal_pa.py  modal_tree.py
indizio/components/layout/: message.py  navbar.py  reload.py
indizio/example/: matrix.tsv  metadata.tsv  metadata_graph.tsv  metadata_pa.tsv
indizio/interfaces/: boolean.py  bound.py  cluster_on.py  edge_weights.py  file_type.py  html_option.py  logging.py  sync_with_network.py
indizio/layouts/: landing_page_layout.py
indizio/pages/: clustergram.py  debug.py  index.py  matrix.py  network.py  stats.py
indizio/store/: active_stores.py  clustergram_parameters.py  distance_matrix.py  dm_graph.py  matrix_parameters.py  metadata_file.py  network_form_store.py  network_interaction.py  presence_absence.py  tree_file.py  upload_form_store.py
indizio/util/: cache.py  callbacks.py  data.py  dataframe.py  files.py  graph.py  hashing.py  log.py  package.py  plot.py  trees.py  types.py
test/: input_file
test2/: interaction_scores_squareform.csv  p_values_squareform.csv  presence_absence.csv  salmonella_tree.nw
test3/: Salmonella_Genomes_metadata.xlsx  salmIndizioGenes_intr_score_square.csv
test_data/: pa.csv  pa_metadata.csv
test_data/test/: EvolCCMSal.csv  Salmindizio.csv  tree.nw
test_data/test3/: Saltree.nw  salmIndizioGenes_p_square.csv  toSalInd_PA_scientific_names.csv
(+100 files in other folders)
