[build-system]
requires = [
    "setuptools >= 61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "indizio"
version = "0.4.0"
dependencies = [
    "dash[diskcache] ~= 2.16.1",
    "dash-bootstrap-components ~= 1.5.0",
    "dash-cytoscape ~= 1.0.0",
    "diskcache ~= 5.6.3",
    "dash-bio ~= 1.0.2",
    "pydantic ~= 2.6.4",
    "networkx ~= 3.2.1",
    "orjson ~= 3.10.0",
    "dendropy ~= 4.6.1",
    "frozendict ~= 2.4.1",
    "pillow ~= 10.3.0",
    "pandas ~= 2.2.1",
    "numpy ~= 1.26.4",
    "tqdm ~= 4.66.2",
    "scipy ~= 1.13.0",
    "phylodm ~= 3.0.0",
    "typer[all] ~= 0.12.0"
]
requires-python = ">= 3.9"
authors = [
    { name = "Robert Beiko" },
    { name = "Ryan Fink" },
    { name = "Alex Manuele" },
    { name = "Aaron Mussig", email = "aaronmussig@gmail.com" }
]
description = "Visualization dashboard for presence/absence data, distance matrices, and phylogenetic trees."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["visualization", "dashboard", "presence-absence", "distance-matrices", "bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Framework :: Dash",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Environment :: Web Environment"
]

[project.urls]
Homepage = "https://github.com/beiko-lab/Indizio"
Documentation = "https://github.com/beiko-lab/Indizio"
Repository = "https://github.com/beiko-lab/Indizio.git"
"Bug Tracker" = "https://github.com/beiko-lab/Indizio/issues"

[project.scripts]
indizio = "indizio.__main__:app"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.package-data]
indizio = ["example/*"]
"*" = ["LICENSE"]
